[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/player_bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/enemy_bullet.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/bullet_wall_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/bullet_destroyed.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 1.98114

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BlueSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="RedSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="WallHitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DestroyedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
